--- a/index.html
+++ b/index.html
@@ -1,3 +1,24 @@
+<html>
+  <head>
+    <link rel="stylesheet" href="dist/reveal.css">
+    <link rel="stylesheet" href="dist/theme/white.css">
+  </head>
+  <body>
+    <div class="reveal">
+      <div class="slides">
+        <section>Slide 1
+          TEST
+        </section>
+        <section>Slide 2
+          <section>Vertical Slide 1</section>
+          <section>Vertical Slide 2</section>
+        </section>
 
-TEST
-
+      </div>
+    </div>
+    <script src="dist/reveal.js"></script>
+    <script>
+      Reveal.initialize();
+    </script>
+  </body>
+</html>
