--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
   <body>
     <div class="reveal">
       <div class="slides">
-        <section>Slide 1
-          TEST
+
+        <section data-background-image="img/JR2024.jpg"/>
+
+        <section data-background-image="img/JR2024.jpg" data-background-opacity="0.8" data-background-size="100% 50%">
+
         </section>
+
         <section>Slide 2
           <section>Vertical Slide 1</section>
           <section>Vertical Slide 2</section>
