--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
         <section data-background-image="img/JR2024.jpg"/>
 
         <section data-background-image="img/JR2024.jpg" data-background-opacity="0.8" data-background-size="100% 50%">
-
+            <h1>Introduction - Patrick SILLARD [IGN-ENSG]</h1>
         </section>
 
-        <section>Slide 2
-          <section>Vertical Slide 1</section>
-          <section>Vertical Slide 2</section>
+        <section data-background-image="img/JR2024.jpg" data-background-opacity="0.8" data-background-size="100% 50%">
+            <h1>Session Jumeaux numériques</h1>
+        </section>
+
+        <section data-background-image="img/JR2024.jpg" data-background-opacity="0.8" data-background-size="100% 50%">
+          <h2>Le projet ICI - Modélisations épidémiologiques pour évaluer diverses interventions sanitaires - Maxime COLOMB [INRIA]</h2>
+          <section>Slides iframe</section>
         </section>
 
       </div>
