--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <div class="reveal">
       <div class="slides">
 
-        <section data-background-image="img/JR2024.jpg"/>
+        <section data-background-image="img/JR2024.jpg">
+          test
+        </section>
 
         <section data-background-image="img/JR2024.jpg" data-background-opacity="0.8" data-background-size="100% 50%">
             <h1>Introduction - Patrick SILLARD [IGN-ENSG]</h1>
