--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
             <h1 style="vertical-align: middle">Introduction - Patrick SILLARD [IGN-ENSG]</h1>
         </section>
 
-        <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
-            <h1>Session Jumeaux numériques</h1>
+        <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 40%" data-background-position="top">
+            <h1 style="vertical-align: middle">Session Jumeaux numériques</h1>
         </section>
 
-        <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
-          <h2>Le projet ICI - Modélisations épidémiologiques pour évaluer diverses interventions sanitaires - Maxime COLOMB [INRIA]</h2>
+        <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 40%" data-background-position="top">
+          <h2 style="vertical-align: middle">Le projet ICI - Modélisations épidémiologiques pour évaluer diverses interventions sanitaires <br/> Maxime COLOMB [INRIA]</h2>
           <section>Slides iframe</section>
         </section>
 
-        <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
-          <h2>Digital Twins for Complex Infrastructures and Urban Ecosystems - Mathieu ARQUIER [ENPC]</h2>
+        <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 40%" data-background-position="top">
+          <h2 style="vertical-align: middle">Digital Twins for Complex Infrastructures and Urban Ecosystems <br/> Mathieu ARQUIER [ENPC]</h2>
           <section>Slides iframe</section>
         </section>
 
