--- a/index.html
+++ b/index.html
@@ -20,12 +20,16 @@
         </section>
 
         <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 40%" data-background-position="top">
-          <h2 style="vertical-align: middle">Le projet ICI - Modélisations épidémiologiques pour évaluer diverses interventions sanitaires <br/> Maxime COLOMB [INRIA]</h2>
+          <section>
+            <h2 style="vertical-align: middle">Le projet ICI - Modélisations épidémiologiques pour évaluer diverses interventions sanitaires <br/> Maxime COLOMB [INRIA]</h2>
+          </section>
           <section>Slides iframe</section>
         </section>
 
         <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 40%" data-background-position="top">
-          <h2 style="vertical-align: middle">Digital Twins for Complex Infrastructures and Urban Ecosystems <br/> Mathieu ARQUIER [ENPC]</h2>
+          <section>
+            <h2 style="vertical-align: middle">Digital Twins for Complex Infrastructures and Urban Ecosystems <br/> Mathieu ARQUIER [ENPC]</h2>
+          </section>
           <section>Slides iframe</section>
         </section>
 
