--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
       <div class="slides">
 
         <section data-background-image="img/JR2024.jpg">
-          test
+          <div/>
         </section>
 
-        <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 40%" data-background-position="top">
-            <h1 style="vertical-align: middle">Introduction - Patrick SILLARD [IGN-ENSG]</h1>
+        <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
+            <h1 style="vertical-align: bottom">Introduction <br/> Patrick SILLARD [IGN-ENSG]</h1>
         </section>
 
-        <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 40%" data-background-position="top">
-            <h1 style="vertical-align: middle">Session Jumeaux numériques</h1>
+        <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
+            <h1 style="vertical-align: bottom">Session Jumeaux numériques</h1>
         </section>
 
-        <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 40%" data-background-position="top">
+        <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
           <section>
-            <h2 style="vertical-align: middle">Le projet ICI - Modélisations épidémiologiques pour évaluer diverses interventions sanitaires <br/> Maxime COLOMB [INRIA]</h2>
+            <h2 style="vertical-align: bottom">Le projet ICI - Modélisations épidémiologiques pour évaluer diverses interventions sanitaires <br/> Maxime COLOMB [INRIA]</h2>
           </section>
           <section>Slides iframe</section>
         </section>
 
-        <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 40%" data-background-position="top">
+        <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
           <section>
-            <h2 style="vertical-align: middle">Digital Twins for Complex Infrastructures and Urban Ecosystems <br/> Mathieu ARQUIER [ENPC]</h2>
+            <h2 style="vertical-align: bottom">Digital Twins for Complex Infrastructures and Urban Ecosystems <br/> Mathieu ARQUIER [ENPC]</h2>
           </section>
           <section>Slides iframe</section>
         </section>
