--- a/index.html
+++ b/index.html
@@ -19,11 +19,16 @@
             <h1 style="vertical-align: bottom">Session Jumeaux numériques</h1>
         </section>
 
-        <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
-          <section>
-            <h2 style="vertical-align: bottom">Le projet ICI - Modélisations épidémiologiques pour évaluer diverses interventions sanitaires <br/> Maxime COLOMB [INRIA]</h2>
+        <section>
+          <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
+            <div style="vertical-align: bottom">
+              <h2>Le projet ICI - Modélisations épidémiologiques pour évaluer diverses interventions sanitaires</h2>
+              <h3 style="font-style: italic">Maxime COLOMB [INRIA]</h3>
+            </div>
           </section>
-          <section>Slides iframe</section>
+          <section>
+            <iframe style="width:100%; height:100%;" src="Slides/1-1_MaximeColomb.pdf">
+          </section>
         </section>
 
         <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
