--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
       <div class="slides">
 
         <section data-background-image="img/JR2024.jpg">
-          <div/>
+          <div>.<div/>
         </section>
 
         <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
-            <h1 style="vertical-align: bottom">Introduction <br/> Patrick SILLARD [IGN-ENSG]</h1>
+            <div style="vertical-align: bottom">
+              <h1>Introduction</h1>
+              <h2 style="font-style: italic">Patrick SILLARD [IGN-ENSG]</h2>
+            </div>
         </section>
 
         <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
