--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <div class="slides">
 
         <section data-background-image="img/JR2024.jpg">
-          <div>.<div/>
+          test
         </section>
 
         <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
@@ -29,8 +29,8 @@
               <h3 style="font-style: italic">Maxime COLOMB [INRIA]</h3>
             </div>
           </section>
-          <section>
-            <iframe style="width:100%; height:100%;" src="Slides/1-1_MaximeColomb.pdf">
+          <section data-background-iframe="Slides/1-1_MaximeColomb.pdf" data-background-interactive>
+            slides
           </section>
         </section>
 
