--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
       <div class="slides">
 
         <section data-background-image="img/JR2024.jpg">
-          test
+          <div hidden>Title</div>
         </section>
 
         <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
-            <div style="vertical-align: bottom">
-              <h1>Introduction</h1>
-              <h2 style="font-style: italic">Patrick SILLARD [IGN-ENSG]</h2>
-            </div>
+              <h1 style="vertical-align: bottom">Introduction</h1>
+              <h2 style="vertical-align: bottom; font-style: italic;">Patrick SILLARD [IGN-ENSG]</h2>
         </section>
 
         <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
@@ -29,9 +27,7 @@
               <h3 style="font-style: italic">Maxime COLOMB [INRIA]</h3>
             </div>
           </section>
-          <section data-background-iframe="Slides/1-1_MaximeColomb.pdf" data-background-interactive>
-            slides
-          </section>
+          <section data-background-iframe="Slides/1-1_MaximeColomb.pdf" data-background-interactive><div hidden>Slides</div></section>
         </section>
 
         <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
