--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
         </section>
 
         <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
-              <div style="size: 50%"></div>
-              <h1 style="vertical-align: bottom">Introduction</h1>
-              <h2 style="vertical-align: bottom; font-style: italic;">Patrick SILLARD [IGN-ENSG]</h2>
+              <div style="position:absolute;bottom:0;">
+                <h1 style="vertical-align: bottom">Introduction</h1>
+                <h2 style="vertical-align: bottom; font-style: italic;">Patrick SILLARD [IGN-ENSG]</h2>
+              </div>
         </section>
 
         <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
