--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         </section>
 
         <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
-                <div height="50%"></div>
-                <h1>Introduction</h1>
+                <h1 style="margin-top: 50%;">Introduction</h1>
                 <h2>Patrick SILLARD [IGN-ENSG]</h2>
         </section>
 
