--- a/index.html
+++ b/index.html
@@ -13,29 +13,25 @@
 
         <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
                 <h1 style="margin-top: 35%;">Introduction</h1>
-                <h2>Patrick SILLARD [IGN-ENSG]</h2>
+                <h2 style="font-style: italic">Patrick SILLARD [IGN-ENSG]</h2>
         </section>
 
         <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
-            <h1 style="vertical-align: bottom">Session Jumeaux numériques</h1>
+            <h1 style="margin-top: 35%;">Session Jumeaux numériques</h1>
+            <h3 style="font-style: italic">Présidence : Bénédicte Bucher [IGN-ENSG]</h3>
         </section>
 
         <section>
           <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
             <div style="vertical-align: bottom">
-              <h2>Le projet ICI - Modélisations épidémiologiques pour évaluer diverses interventions sanitaires</h2>
+              <h2 style="margin-top: 35%;">Le projet ICI - Modélisations épidémiologiques pour évaluer diverses interventions sanitaires</h2>
               <h3 style="font-style: italic">Maxime COLOMB [INRIA]</h3>
             </div>
           </section>
           <section data-background-iframe="Slides/1-1_MaximeColomb.pdf" data-background-interactive><div hidden>Slides</div></section>
         </section>
 
-        <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
-          <section>
-            <h2 style="vertical-align: bottom">Digital Twins for Complex Infrastructures and Urban Ecosystems <br/> Mathieu ARQUIER [ENPC]</h2>
-          </section>
-          <section>Slides iframe</section>
-        </section>
+        
 
       </div>
     </div>
