--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <h4 style="font-style: italic">Mathieu FAUVEL [INRAE] et Clément MALLET [IGN]</h4>
             </div>
           </section>
-          <section data-background-iframe="Slides/2-2_MathieuFauvel.pdf" data-background-interactive><div hidden>Slides</div></section>
+          <section data-background-iframe="Slides/2-2_MathieuFauvel.mp4" data-background-interactive><div hidden>Slides</div></section>
         </section>
 
         <section>
@@ -103,7 +103,7 @@
               <h4 style="font-style: italic">David SHEREEN [INRAE]</h4>
             </div>
           </section>
-          <section data-background-iframe="Slides/2-3_DavidShereen.pdf" data-background-interactive><div hidden>Slides</div></section>
+          <section data-background-iframe="Slides/2-3_DavidSheeren.pdf" data-background-interactive><div hidden>Slides</div></section>
         </section>
 
         <section>
