--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <section>
           <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
             <div style="vertical-align: bottom">
-              <h3 style="margin-top: 35%;">Présentation des posters</h3>
+              <h3 style="margin-top: 15%;">Présentation des posters</h3>
               <p style="font-style: italic;font-size: smaller;">Charlotte GAUGNE [CNES] ; Karim KASSAB [Criteo] ; Florent GENIET [IGN] ; Sami GUEMBOUR [UGE] ; Chahine-Nicolas ZEDE [UGE] ; Bérénice LE MAO [IGN] et Guillaume TOUYA [IGN] ; Grégoire GRZECZKOWICZ [DGA] ; Paul CALLOCH [ENSG], Brice LABBE [ENSG] et Lorine PESEUX [ENSG] ; Loïs BILHERAN [ENSG], Joanna GOSSE [ENSG] et Félix MERCIER [ENSG] ; Gabin BOURLON [ENSG], Alexandre ESTEOULLE [ENSG] et Elisabeth GIROUX [ENSG] ; Eliot BARRIERE [ENSG], Amaury BLOTIN [ENSG] et Mathurin PAIN [ENSG] ; Romain COIN [ENSG], Axel DEBOCK [ENSG] et Laure GREGOIRE [ENSG] ; Rieulle BRUSQ [ENSG], Lilia CAMPO [ENSG] et Vanessa PECH [ENSG]</p>
             </div>
           </section>
@@ -135,8 +135,8 @@
         </section>
 
         <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
-            <h2 style="margin-top: 35%;">Table ronde : Jumeaux numériques et Communs</h2>
-            <p style="font-style: italic">Gilles CORDE [IFPEN], Yann LE YHUELIC [1Spatial France], Rémi Montorio [Métropole Européenne de Lille], Claude PENICAND [IGN] et Perrine RUTKOWSKI [Cerema] ; Animation : Rudy Cambier (IGN)</p>
+            <h2 style="margin-top: 30%;">Table ronde : Jumeaux numériques et Communs</h2>
+	    <p style="font-style: italic">Gilles CORDE [IFPEN], Yann LE YHUELIC [1Spatial France], Rémi Montorio [Métropole Européenne de Lille], Claude PENICAND [IGN] et Perrine RUTKOWSKI [Cerema]<br/> Animation : Rudy Cambier (IGN)</p>
         </section>
 
         <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
@@ -333,10 +333,17 @@
             <h4 style="font-style: italic">Mehdi DAAKIR [IGN] et Marc PIERROT-DESEILLIGNY [IGN]</h4>
         </section>
 
+    <section>
         <section data-background-image="img/JR2024.jpg" data-background-opacity="0.5" data-background-size="100% 50%" data-background-position="top">
             <h2 style="margin-top: 35%;">Tutoriel OpenMOLE</h2>
             <h4 style="font-style: italic">Juste RAIMBAULT [IGN], Paul CHAPRON [IGN], Julien PERRET [IGN], Maxime COLOMB [INRIA]</h4>
         </section>
+
+	<section data-background-iframe="Slides/9_TutorialOpenMOLE.pdf" data-background-interactive><div hidden>Slides</div></section>
+
+
+    </section>
+
 
       </div>
     </div>
